fixed content overflow issue in sidebar and initial styling of message form

--- a/logdna-frontend/src/Styles/Messages.css
+++ b/logdna-frontend/src/Styles/Messages.css
@@ -1,4 +1,3 @@
 .Messages-container {
-  margin: 110px 30px 30px calc(30vw + 30px);
-  margin-top: 110px;
+  margin: 110px 30px 105px calc(30vw + 30px);
 }
